asset/css/styles.css
/* ... */
.wpsdb .select-deselect-divider {
	margin: 0 6px;
}
.wpsdb .select-wrap {
	display: none;
	margin-top: 12px;
}
.wpsdb .select-post-types-wrap {
	display: block;
}
.wpsdb .multiselect {
	min-width: 420px;
	min-height: 180px;
	margin-bottom: 10px;
}
.wpsdb .table-migrate-options li label {
	font-size: 12px;
	font-weight: normal;
}
.wpsdb .table-migrate-options li {
	margin-bottom: 5px;
}
.wpsdb .general-helper {
	border-radius: 50%;
	border: 1px solid #ccc;
	background-color: #eee;
	width: 15px;
	height: 15px;
	display: inline-block;
	position: relative;
	top: 4px;
	margin-top: -4px;
	cursor: pointer;
	margin-left: 2px;
}
.wpsdb .general-helper:hover {
	border-color: #aaa;
}
.wpsdb .general-helper:after {
	content: "?";
	color: #999999;
	font-size: 10px;
	font-weight: bold;
	left: 4px;
	position: absolute;
	top: -1px;
}
.wpsdb .helper-message {
	padding: 10px;
	border: 1px solid #ccc;
	border-radius: 3px;
	background-color: #fff;
	position: absolute;
	width: 500px;
	z-index: 9999;
	display: none;
	box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
}
.wpsdb .inline-message {
	padding: 10px;
	border-radius: 3px;
	margin-top: 5px;
}
.wpsdb .inline-message.error {
	border: 1px solid #cc0000;
	background-color: #ffebe8;
}
.wpsdb .inline-message.warning {
	background-color: #ffffe0;
	border: 1px solid #e6db55;
}
.wpsdb .helper-message:before {
	content: "";
	border-bottom: 8px solid transparent;
	border-right: 8px solid #aaa;
	border-top: 8px solid transparent;
	display: block;
	height: 0;
	left: -8px;
	position: absolute;
	top: 11px;
	width: 0;
}
.wpsdb .helper-message:after {
	content: "";
	border-bottom: 8px solid transparent;
	border-right: 8px solid #fff;
	border-top: 8px solid transparent;
	display: block;
	height: 0;
	left: -7px;
	position: absolute;
	top: 11px;
	width: 0;
}
.wpsdb .helper-message.bottom:before {
	content: "";
	border-left: 8px solid transparent;
	border-right: 8px solid transparent;
	border-bottom: 8px solid #aaa;
	border-top: 0;
	display: block;
	height: 0;
	left: 50%;
	margin-left: -8px;
	position: absolute;
	top: -9px;
	width: 0;
}
.wpsdb .helper-message.bottom:after {
	content: "";
	border-left: 8px solid transparent;
	border-right: 8px solid transparent;
	border-bottom: 8px solid #fff;
	border-top: 0;
	display: block;
	height: 0;
	left: 50%;
	margin-left: -8px;
	position: absolute;
	top: -8px;
	width: 0;
}
.wpsdb .label-disabled {
	color: #888;
}
.wpsdb .prefix-notice,
.wpsdb .ssl-notice,
.wpsdb .different-plugin-version-notice,
.wpsdb .directory-permission-notice {
	background-color: #ffffe0;
	border: 1px solid #e6db55;
	padding: 15px;
	border-radius: 3px;
	margin-bottom: 15px;
	display: none;
}
.wpsdb .prefix-notice p,
.wpsdb .ssl-notice p,
.wpsdb .different-plugin-version-notice p,
.wpsdb .directory-permission-notice p {
	margin-top: 0px;
}
.wpsdb .prefix-notice p:last-child,
.wpsdb .ssl-notice p:last-child,
.wpsdb .different-plugin-version-notice p:last-child,
.wpsdb .directory-permission-notice p:last-child {
	margin: 0px;
}
.wpsdb .different-plugin-version-notice,
.wpsdb .directory-permission-notice {
	background-color: #ffebe8;
	border-color: #cc0000;
}
.wpsdb .different-plugin-version-notice a,
.wpsdb .directory-permission-notice a {
	color: #cc0000;
	text-decoration: underline;
}
.wpsdb .save-migration-profile-wrap li label {
	font-size: 12px;
	font-weight: normal;
}
.wpsdb .save-migration-profile-wrap li {
	margin-bottom: 5px;
	padding-left: 25px;
}
.wpsdb .save-migration-profile-wrap .indent-wrap {
	margin-left: 0px;
}
.wpsdb .create-new-label {
	margin-right: 8px;
}
.wpsdb .create-new-profile {
	position: absolute;
	top: -5px;
}
.wpsdb .replace-remove-row,
.wpsdb .delete-profile {
	background-color: #eee;
	border: 1px solid #ccc;
	border-radius: 50% 50% 50% 50%;
	cursor: pointer;
	height: 11px;
	left: 5px;
	margin-left: 2px;
	position: absolute;
	margin-top: -6px;
	top: 50%;
	width: 11px;
	display: none;
	background-position: 50% 50%;
	background-size: 6px 6px;
	background-repeat: no-repeat;
}
.wpsdb .replace-remove-row:after,
.wpsdb .delete-profile:after {
	content: "\00d7";
	left: 2px;
	position: absolute;
	top: -3px;
	color: #aaa;
	font-size: 12px;
}
.wpsdb .replace-remove-row:after {
	position: relative;
}
.wpsdb .replace-remove-row:hover,
.wpsdb .delete-profile:hover {
	border-color: #aaa;
}
.wpsdb .migrate-db .ajax-success-msg {
	font-weight: bold;
	margin: 3px 0 0 9px;
	display: inline-block;
}
.wpsdb p img.save-profile-ajax-spinner {
	margin-left: 10px;
}
.wpsdb .backup-description {
	left: 20px;
	position: relative;
}
.wpsdb .backup-option-disabled {
	margin-bottom: 0px !important;
}
.wpsdb .settings-tab {
	display: none;
}
.wpsdb .settings-tab .slider {
	max-width: 416px;
}
.wpsdb .settings-tab .slider-label {
	display: block;
	margin-bottom: 10px;
	float: left;
	width: 50%;
}
.wpsdb .settings-tab .slider-label-wrapper {
	max-width: 416px;
	width: 100%;
	position: relative;
}
.wpsdb .settings-tab .amount {
	width: 50%;
	text-align: right;
	display: block;
	text-align: right;
	float: left;
}
.wpsdb .settings-tab .slider-spinner {
	position: absolute;
	right: -35px;
	bottom: -13px;
}
.wpsdb .settings-tab .slider-success-msg {
	display: none;
	right: -53px;
	bottom: -13px;
	position: absolute;
	font-weight: bold;
}
.wpsdb .settings-tab .ui-slider {
	border: 1px solid #dfdfdf;
	height: 10px;
	border-radius: 2px;
	position: relative;
}
.wpsdb .settings-tab .ui-slider-handle {
	width: 7px;
	height: 20px;
	background-color: #aaa;
	display: block;
	position: absolute;
	top: -5px;
	outline: none;
}
.wpsdb .settings-tab .ui-slider-handle:active {
	background-color: #999;
}
.wpsdb .settings-tab .ui-slider-range {
	background-color: #eee;
	height: 100%;
}
.wpsdb .settings-tab .option-section li label {
	font-size: 12px;
	font-weight: normal;
	position: relative;
}
.wpsdb .settings-tab .option-section li {
	margin-bottom: 5px;
}
.wpsdb .settings-tab .option-section li:last-child {
	margin-bottom: 0px;
}
/* ... */

